' Generated by UML Generator
' Encoded: rPGzJyCm48Pt_mgF2MqgvWfLHUrI2H1I4Go8mR5FxOdOZcmd0wN_7TlfHr92gTXOakZklVFvUHrFhMF6LR8WzXrLoGoJb1VCsbld3EQLWmNNQeaVGA_96WLGZeONG4XKqHU6pe3_s11ACrOKzw0gEwRXDTEor0gK2wdCFmPxTVA3C0sYqg1o8PoaOrfh56HB2CkjCuoxPhXkLLnxm8H8P3jysdlNp4iDI5t3fUeLkDaQ2v7Wc6BCd6ukI1wOX33mqcDJgrrm3fORB1rgzIttQ9372g6ht0FrKRJFu3FC88lwNEi2c3f0QGCvScZGTpRZkTwXTJUTGIT1floOhK4oSPom7OvkHG_Q1KFQ8q__7VmpB1SEPCFpGb3rmR2sNLaPp6rPUmGQLlWTwf3sD1xIJjlqJvi_SyRw3-KPMazWtTnW3SqVkF5tYKE-fPAXIfXPsVt2hs-j-iELSPLb9svsV-lHQDAJzom_U-EwjrrqjATa2ahuQ-yB
' URL: http://www.plantuml.com/plantuml/uml/rPGzJyCm48Pt_mgF2MqgvWfLHUrI2H1I4Go8mR5FxOdOZcmd0wN_7TlfHr92gTXOakZklVFvUHrFhMF6LR8WzXrLoGoJb1VCsbld3EQLWmNNQeaVGA_96WLGZeONG4XKqHU6pe3_s11ACrOKzw0gEwRXDTEor0gK2wdCFmPxTVA3C0sYqg1o8PoaOrfh56HB2CkjCuoxPhXkLLnxm8H8P3jysdlNp4iDI5t3fUeLkDaQ2v7Wc6BCd6ukI1wOX33mqcDJgrrm3fORB1rgzIttQ9372g6ht0FrKRJFu3FC88lwNEi2c3f0QGCvScZGTpRZkTwXTJUTGIT1floOhK4oSPom7OvkHG_Q1KFQ8q__7VmpB1SEPCFpGb3rmR2sNLaPp6rPUmGQLlWTwf3sD1xIJjlqJvi_SyRw3-KPMazWtTnW3SqVkF5tYKE-fPAXIfXPsVt2hs-j-iELSPLb9svsV-lHQDAJzom_U-EwjrrqjATa2ahuQ-yB
' Generated on: 2025-12-17T00:09:24.003957

@startuml
skinparam classAttributeIconSize 0
hide circle

class Waitress {
  -allMenus: MenuComponent
  --
  +Waitress(allMenus: MenuComponent)
  +printMenu(): void
}

abstract class MenuComponent {
  +add(menuComponent: MenuComponent): void
  +remove(menuComponent: MenuComponent): void
  +getChild(i: int): MenuComponent
  +getName(): String
  +getDescription(): String
  +getPrice(): double
  +isVegetarian(): boolean
  +print(): void
}

class Menu {
  -menuComponents: List<MenuComponent>
  -name: String
  -description: String
  --
  +Menu(name: String, description: String)
  +add(menuComponent: MenuComponent): void
  +remove(menuComponent: MenuComponent): void
  +getChild(i: int): MenuComponent
  +getName(): String
  +getDescription(): String
  +print(): void
}

class MenuItem {
  -name: String
  -description: String
  -vegetarian: boolean
  -price: double
  --
  +MenuItem(name: String, description: String, vegetarian: boolean, price: double)
  +getName(): String
  +getDescription(): String
  +isVegetarian(): boolean
  +getPrice(): double
  +print(): void
}

class MenuTestDrive {
  +{static} main(args: String[]): void
}

Waitress *-- MenuComponent
MenuComponent ..> MenuComponent
Menu --|> MenuComponent
Menu o-- MenuComponent
MenuItem --|> MenuComponent
@enduml